# SpenceBoy

./: .gitignore  CMakeLists.txt
Asm/BootROMs/: build-nev.sh  build.sh  dmg_boot.asm  dmg_neviksti.asm  dmg_neviksti_hex.cpp
Asm/ROMs/: joypad.gb  serenity.gb
Asm/Tools/: gen_op_codes.js
Asm/Tools/gb2bpp/: gb2bpp.js  index.html
Asm/all-load-codes/: build.sh  loading.gb  main.asm
Asm/bit-masks/: build.sh
Asm/common/: gingerbread.asm
Asm/complement/: build.sh  complement.gb  main.asm
Asm/complex-subroutine/: build.sh  complex-routine.gb  main.asm
Asm/dec-jumps/: build.sh  dec-jumps.gb  main.asm
Asm/ginger-stripe/: build.sh  gbbackground.inc  ginger-bg.gb  main.asm  stripe.inc
Asm/hello-world/: build.sh  hello-world.gb  main.asm
Asm/increments/: build.sh  increments.gb  main.asm
Asm/joypad-inputs/: build.sh  joypad.gb  main.asm
Asm/lcd-status-registers/: build.sh  main.asm
Asm/loop/: build.sh  loop.gb  main.asm
Asm/primitives/: build-all.sh  cp.asm  rlca.asm
Asm/push-pop/: build.sh  main.asm
Asm/read-ram/: build.sh  main.asm  ram.gb
Asm/serenity-bg/: build.sh  main.asm  serenity.gb  serenityos.inc
Asm/serentiyos-bg/: serenityos.inc
Asm/shift-rotate/: build.sh  main.asm  shift-rotate.gb
Asm/smiley/: build.sh  main.asm  smiley.gb
Asm/stack/: build.sh  main.asm
Asm/stripes/: build.sh  main.asm  smiley.gb  stripes.gb
Asm/test-cases/: add-hl-xx.asm  add-to-stack-pointer-carry.asm  add-to-stack-pointer.asm  bit-check.asm  build-all.sh  complement.asm  complex-subroutine.asm  cp.asm  dec-jumps.asm  dec-zero.asm  double-bits.asm  increments.asm  interrupts.asm  interrupts.todo  loading.asm  loop.asm  push-pop.asm  read-ram.asm  reset-bits.asm  rl-c.asm  rlca.asm  rotate-left.asm  rotate-through-carry.asm  rst-jumps.asm  shift-right-into-carry.asm  shift-rotate.asm  smiley.asm  stack.asm  stripes.asm  timer-interrupt.asm  xor.asm
Asm/text-render-bg/: build.sh  hello_world.inc  main.asm  text-render.gb
Asm/wait-frame/: build.sh  main.asm  wait-frame.gb
Assets/: git-pre-push-template  test-template.asm
Docs/: clion-tips.md  cpp-notes.md  dev-log.md  readme.md  research.md
Emulator/: Buffer.h  CPU.cpp  CPU.h  Debugger.cpp  Debugger.h  Emulator.cpp  Emulator.h  IODevice.cpp  IODevice.h  Input.cpp  Input.h  InternalSDL.h  InterruptFlags.cpp  InterruptFlags.h  Joypad.cpp  Joypad.h  MMU.cpp  MMU.h  MemoryMap.h  OpCode.h  PPU.cpp  PPU.h  RuntimeSettings.h  SoundCard.cpp  SoundCard.h  Timer.cpp  Timer.h  main.cpp
Emulator/GUI/: Bitmap.h  Rect.h  Renderer.h  SDLRenderer.cpp  SDLRenderer.h  Texture.cpp  Texture.h
SD/: Assertions.h  Bytes.h  Color.h  File.cpp  File.h  LogStream.cpp  LogStream.h  Option.h  String.cpp  String.h  Test.h  Timer.h  Types.h  Utility.h  Vector.h
Scripts/: bootstrap.sh  build.sh  create-test.sh  pandocs.sh  run.sh  test.sh
Tests/: CMakeLists.txt  TestAssertions.cpp  TestCPU.cpp  TestJoypadDevice.cpp  TestString.cpp  TestVector.cpp  run_all.sh  run_test.sh
Tests/data/: add-hl-xx.gb  add-hl-xx.gb.snapshot  add-to-stack-pointer-carry.gb  add-to-stack-pointer-carry.gb.snapshot  add-to-stack-pointer.gb  add-to-stack-pointer.gb.snapshot  bit-check.gb  bit-check.gb.snapshot  bit-masks.gb.snapshot  complement.gb  complement.gb.snapshot  complex-routine.gb.snapshot  complex-subroutine.gb  complex-subroutine.gb.snapshot  cp.gb  cp.gb.snapshot  dec-jumps.gb  dec-jumps.gb.snapshot  dec-zero.gb  dec-zero.gb.snapshot  double-bits.gb  double-bits.gb.snapshot  ginger-bg.gb  hello-world.gb  increments.gb  increments.gb.snapshot  interrupts.gb  interrupts.gb.snapshot  joypad.gb  lcd-status.gb.snapshot  loading.gb  loading.gb.snapshot  loop.gb  loop.gb.snapshot  push-pop.gb  push-pop.gb.snapshot  ram.gb.snapshot  read-ram.gb  read-ram.gb.snapshot  reset-bits.gb  (+25 more)
Tests/precompiled/: bit-masks.gb.snapshot  complement.gb.snapshot  complex-routine.gb.snapshot  dec-jumps.gb.snapshot  ginger-bg.gb  ginger-bg.gb.snapshot  hello-world.gb  hello-world.gb.snapshot  increments.gb.snapshot  lcd-status.gb  lcd-status.gb.snapshot  loading.gb  loading.gb.snapshot  loop.gb  loop.gb.snapshot  push-pop.gb.snapshot  ram.gb  ram.gb.snapshot  rlca.gb  serenity.gb.snapshot  shift-rotate.gb  shift-rotate.gb.snapshot  smiley.gb.snapshot  stack.gb.snapshot  stripes.gb.snapshot  xor.gb  xor.gb.snapshot
WAVPlayer/: InternalSDL.h  RuntimeSettings.h  WAVFile.cpp  WAVFile.h  WAVPlayer.cpp  WAVPlayer.h  main.cpp
cmake/: FindSDL2.cmake
docs/: clion-tips.md  cpp-notes.md  dev-log.md  readme.md  research.md  todo.md
